function blocks updated for easy readability

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "authors": [
         {
-            "name": "Contextify",
+            "name": "Dulitha Rajapaksha",
             "email": "dulithamahishka94@gmail.com"
         }
     ],
